[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/obstacles/small_wood_spike.png" type="Texture" id=1]
[ext_resource path="res://assets/obstacles/long_wood_spike.png" type="Texture" id=2]
[ext_resource path="res://scripts/GrupoDInimigos_Area2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.5, 16.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 25 )

[node name="GrupoDInimigos_Area2D" type="Area2D"]
script = ExtResource( 3 )

[node name="Logs_Pequenos" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Logs_Pequenos2" type="Sprite" parent="Logs_Pequenos"]
position = Vector2( 50, 0 )
texture = ExtResource( 1 )

[node name="Logs_Pequenos3" type="Sprite" parent="Logs_Pequenos"]
position = Vector2( -60, 0 )
texture = ExtResource( 1 )

[node name="Logs_Pequenos_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -0.5 )
shape = SubResource( 1 )

[node name="Logs_Grandes" type="Sprite" parent="."]
position = Vector2( 0, -9 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Logs_Grandes2" type="Sprite" parent="Logs_Grandes"]
position = Vector2( -43.3333, 3.33333 )
texture = ExtResource( 2 )

[node name="Logs_Grandes3" type="Sprite" parent="Logs_Grandes"]
position = Vector2( 40, 0 )
texture = ExtResource( 2 )

[node name="Logs_Grandes_Collision_Shape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_GrupoDInimigos_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
